Add a nbsp at the the end of the text when the next text has a leading space.

This is a regression caused by https://codereview.chromium.org/2175163004.
The above CL adds a plain space between text nodes, but a nbsp should be added
if the next text node has a leading plain space. If not, two spaces are
collapsed into one plain space.

BUG=657631
TEST=editing/inserting/insert-space.html

Review-Url: https://chromiumcodereview.appspot.com/2432083003
Cr-Commit-Position: refs/heads/master@{#426420}

Former-commit-id: 952d55918cdb455223cabf647cef859486a37b0f